--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 * {
     margin: 0;
     padding: 0;
+    background-color: blanchedalmond;
 }
 
 body {
@@ -304,7 +305,7 @@ border: rgb(255, 255, 255) 0.1rem solid;
 .details-container{
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background: blanchedalmond;
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
@@ -314,6 +315,20 @@ border: rgb(255, 255, 255) 0.1rem solid;
 .section-container{
     gap: 4rem;
     height:80%;
+}
+
+.text-container{
+margin-top:80px;
+}
+
+.text{
+    padding: 1.5rem;
+    flex: 1;
+    background: blanchedalmond;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;   
 }
 
 .section_pic-container{
@@ -404,7 +419,7 @@ article.icon{
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
-    background:rgb(250, 250, 250);
+    background:blanchedalmond;
     margin: 2rem auto;
     padding:0.5rem;
 }
