--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -44,6 +44,15 @@
 
 
 @media screen and (max-width: 600px) {
+    /*
+
+     *{
+        width: 100%;
+        text-align: center;
+        margin: auto;
+    } 
+       
+    */
     #contact,
     footer{
         height: 40vh;
