--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ article.icon{
 
 .color-container {
     border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
+    background: blanchedalmond;
 }
 
 .project-img {
@@ -392,6 +392,12 @@ article.icon{
     width: 90%;
     height: 90%;
 }
+
+.project1{
+height: 200px;
+}
+
+
 
 .project-title {
     margin: 1rem;
