--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ margin-top:80px;
 }
 
 .section_pic-container{
-    height: 400px;
+    height: 350px;
     width: 400px;
     margin: auto 0;
 }
@@ -394,10 +394,13 @@ article.icon{
 }
 
 .project1{
-height: 200px;
+    height: 250px;
 }
 
-
+.project2{
+    height: 250px;
+}
+    
 
 .project-title {
     margin: 1rem;
@@ -407,6 +410,7 @@ height: 200px;
 .project-btn{
     color:black;
     border-color: rgb(163, 163, 163);
+    margin-top: 10px;
 }
 
 
